p3/confs/ingress.yaml
# # apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-test
#   annotations:
#     ingress.kubernetes.io/ssl-redirect: "false"
#   namespace: dev
# spec:
#   ingressClassName: traefik
#   rules:
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: nginx-test
#             port:
#               number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: will42
  labels:
    app: will42
  namespace: dev
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: will42
            port:
              number: 8085

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: argocd
  name: argocd-ingress
  namespace: argocd
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
